# pico4ml-snake-game

./: CMakeLists.txt  README.md
misc/: pico-joystick.fzz
src/: CMakeLists.txt  snake.c
